Replace harness demos with language-native examples